# Ionosphere

./: .gitignore  README.md  pyproject.toml
notebooks/: explore_data.ipynb  train_ml_models.ipynb  xgboost_implementation.ipynb
src/: __version__.py
