[project]
name = "course_ub_2025"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.9.0,<=3.10.0",
    "numpy>=2.1.0,<2.2",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.12.0,<0.13.0",
    "setuptools>=70.0.0",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.1.1",
    "ydata-profiling>=4.17.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.3.1",
]
tests = [
    "pytest>=8.4.2",
]


[tool.uv]
default-groups = ["dev", "tests"]

[tool.hatch.version]
path = "src/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
plugins = []

[tool.pytest.ini_options]
log_cli_level = "INFO"
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

lint.ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["kvaluation"]
lines-after-imports = 2

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
